# delta-sim

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  ttgen.cpp
src/app/: TttCli.h  ttt.cpp
src/dlogic/: SVector.h  SVectorIterator.h  TruthTable.h  dlogic.h
src/dlogic/circuit/: Circuit.h  Primitive.h
src/dlogic/core/: LFunction.h  component.h  level.h
src/dlogic/utils/: Log.h
